<resources>

    <string name="app_name">博思票据系统</string>
    <string name="title_activity_main">欢迎使用博思票据系统</string>
    <string name="title_activity_reg">用户管理</string>
    <string name="user">你的名称</string>
    <string name="ss">试试手气</string>
    <string name="send">发送</string>

    
    <string name="menu1">设置1</string>
    <string name="menu2">设置2</string>
    <string name="menu3">设置3</string>
    <string name="menu4">设置4</string>
    <string name="menu5">设置5</string>
    <string name="menu6">设置6</string>
    <string name="menu7">设置7</string>
</resources>