<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu1"
        android:title="@string/menu1"
        android:orderInCategory="100" />
    <item android:id="@+id/menu2"
        android:title="@string/menu2"
        android:orderInCategory="100" />
    <item android:id="@+id/menu3"
        android:title="@string/menu3"
        android:orderInCategory="100" />
    <item android:id="@+id/menu4"
        android:title="@string/menu4"
        android:orderInCategory="100" />
    <item android:id="@+id/menu5"
        android:title="@string/menu5"
        android:orderInCategory="100" />
    <item android:id="@+id/menu6"
        android:title="@string/menu6"
        android:orderInCategory="100" />
    <item android:id="@+id/menu7"
        android:title="@string/menu7"
        android:orderInCategory="100" />
</menu>
